# myboot

./: .gitignore  README.md  myboot-依赖注入随机失败-根因与规避.md  pyproject.toml
.cursor/rules/: python-rule.mdc
.github/workflows/: publish.yml
conf/: config.yaml
docs/: dependency-injection.md  pypi-publishing.md  rest-api-async-tasks.md  rest-api-response-format.md
examples/: convention_app.py  dependency_injection_example.py
myboot/: __init__.py  cli.py  exceptions.py
myboot/core/: __init__.py  application.py  auto_configuration.py  config.py  decorators.py  logger.py  scheduler.py  server.py
myboot/core/di/: __init__.py  container.py  decorators.py  providers.py  registry.py
myboot/jobs/: __init__.py  decorators.py  job.py  manager.py
myboot/utils/: __init__.py  async_utils.py  common.py  path_utils.py
myboot/web/: __init__.py  decorators.py  exceptions.py  middleware.py  models.py  response.py
